--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,10 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.0",
-    "prisma": "^6.9.0",
     "zod": "^3.25.56"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prisma": "^6.9.0"
   }
 }
